[package]
name = "gif-privacy-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.10.0", features = ["attributes", "unstable"]}
async-tls = "0.11.0"
clap = {version = "2.33", features = ["yaml"]}
futures-lite = "1.0.0"
httparse = "1.5.1"
rustls = "0.19.0"
rustls-pemfile = "0.2.1"